tests/valid/variadic_proc.fl
printf :: proc extern (*u8, ...);

main :: proc () {
  printf(c"Hello: %ld\n", 123);
}
