tests/invalid/non_const_expr.fl
Const :: 123;
NonConst :: &Const;

main :: proc () {

}
